# iptc_writer

./: .gitignore  CMakeLists.txt  README.md
src/: CExifWriter.cpp  CExifWriter.h  CListFiles.cpp  CListFiles.h  CXmlReader.cpp  CXmlReader.h  iptc_struct.h
test_data/: test.xml
unittest/: CMakeLists.txt  unittest.cpp
